force-app/main/default/objects/Product_Rule__c/Product_Rule__c.object-meta.xml
<CustomObject>
    <description>Container for business logic. Holds the rule definition, conditions and actions.</description>
    <label>Product Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>