force-app/main/default/objects/Product_Rule__c/fields/Advanced_Condition__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Condition__c</fullName>
    <inlineHelpText>Logical expression using condition indices, e.g., 1 AND (2 OR 3). Used when Conditions Met = &quot;Custom&quot;.</inlineHelpText>
    <label>Advanced Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>