force-app/main/default/objects/Product_Rule__c/fields/Conditions_Met__c.field-meta.xml
<CustomField>
    <fullName>Conditions_Met__c</fullName>
    <inlineHelpText>All: all conditions must pass. Any: at least one. Custom: use Advanced Condition formula.</inlineHelpText>
    <label>Conditions Met</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>