force-app/main/default/objects/Product_Rule__c/fields/Evaluation_Event__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Event__c</fullName>
    <inlineHelpText>Save: on record save. Edit: on every field change. Always: both.</inlineHelpText>
    <label>Evaluation Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>