force-app/main/default/objects/Product_Rule__c/fields/Evaluation_Order__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Order__c</fullName>
    <inlineHelpText>For Selection rules, lower = executed first. Leave blank if not a Selection rule.</inlineHelpText>
    <label>Evaluation Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>