force-app/main/default/objects/Product_Rule__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Only active rules are evaluated.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>