force-app/main/default/objects/Product_Rule__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>Message displayed when Validation/Alert rule is triggered.</inlineHelpText>
    <label>Message</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>