force-app/main/default/objects/Product_Rule__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <inlineHelpText>Bundle: evaluated during configurator. Quote: evaluated at OLI save.</inlineHelpText>
    <label>Scope</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>