force-app/main/default/objects/Product_Rule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Validation: blocks save if false.
Alert: warns if false.
Selection: adds/removes/hides options.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>